# microservices

./: docker-compose.yml  notes.md
admin/: Dockerfile  package-lock.json  package.json
admin/src/: index.ts
admin/src/data/: initDatabase.ts
admin/src/data/model/: user.model.ts
admin/src/dtos/: auth.ts
admin/src/middleware/: auth.ts  error.ts  validateApiKey.ts  validateId.ts
admin/src/presentation/: AppRoutes.ts
admin/src/presentation/user/: UserController.ts  UserRoutes.ts
admin/src/start/: app.ts
admin/src/validations/: user.validation.ts
auth/: .env.template  Dockerfile  package.json
auth/src/: index.ts
auth/src/data/: initDatabase.ts
auth/src/middleware/: auth.ts  error.ts  validateApiKey.ts
auth/src/presentation/: AppRoutes.ts
auth/src/presentation/auth/: AuthController.ts  AuthRoutes.ts
db/: Dockerfile  package-lock.json  package.json  tsconfig.json
db/src/: index.ts
notif-service/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
notif-service/src/: db.rs  main.rs  models.rs
notification-service/: Dockerfile  package-lock.json  package.json
notification-service/src/: app.ts  server.ts
notification-service/src/models/: Notification.ts
notification-service/src/routes/: notifications.ts
reports/: Dockerfile  package-lock.json
reports/src/: index.ts
reports/src/data/: initDatabase.ts
reports/src/middleware/: auth.ts  error.ts  validateApiKey.ts
reports/src/presentation/: AppRoutes.ts
reports/src/presentation/reports/: ReportsController.ts  ReportsRoutes.ts
reports/src/validations/: auth.validation.ts
